# dacli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  Test-Report.md  gh-issues.md  mcp_docs_server_prd.md  pyproject.toml
.github/: PR_REVIEW_POLICY.md
.github/workflows/: claude-code-review.yml  claude.yml  gh-pages.yml  sonarcloud.yml  test.yml
.hypothesis/constants/: 00ec2eb9781595bd  071888ab99946d39  0f2f7ab0b86c69ae  13b65ab712d593be  33d11225baa6b45c  36cb49cb3f205eff  46940b46086493cb  67b0a8ccf18bf5d2  74a3745adb4f5a99  80d3359d3db7f509  862ce20e85b3230b  93e167bde01db937  93ed933986114bd9  95935f8f582834c3  a027fa7b96f68442  a7be62748d95ec06  b1ee9de302f7a243  b454be44a531ed1a  c30e06ba3cf2f69a  c4f95f008e5b5947  d0cceb8639f5a103  db86f95ab7823db5  de15925511c36a02
.vibe/: development-plan-fix-cli-elements-invalid-type-warning-225.md  development-plan-fix-insert-before-blank-line-216.md  development-plan-fix-markdown-html-comments-214.md  development-plan-fix-max-depth-off-by-one-218.md  development-plan-fix-mcp-negative-params-validation-220.md  development-plan-fix-update-level-change-hierarchy-217.md  development-plan-fix-validate-broken-includes-219.md  development-plan-fix-validate-syntax-errors-157.md  development-plan-refactor-service-layer-163.md
docs/: user-manual.md
scripts/: build_zipapp.sh  generate_test_badge.py  manual_test.py  update_coverage_badge.py
src/dacli/: __init__.py  asciidoc_parser.py  cli.py  file_handler.py  index_builder.py  main.py  markdown_parser.py  mcp_app.py  models.py  parser_utils.py  root_config.py  structure_index.py
src/dacli/api/: content.py  manipulation.py  models.py  navigation.py
src/dacli/services/: __init__.py  (+5 more)
src/docs/: landingpage.gsp
src/mcp_server/: __main__.py  asciidoc_parser.py  cli.py  main.py  markdown_parser.py  mcp_app.py  structure_index.py
test-docs/: GITHUB-ISSUES.md  TEST-REPORT.md
test-docs/asciidoc/: advanced.adoc  index.adoc  no-sections.adoc
test-docs/markdown/: edge-cases.md  index.md
test_docs/: GITHUB_ISSUES.md  TEST_REPORT.md  basic.adoc  broken_include.adoc  circular_a.adoc  circular_b.adoc  deep_nesting.adoc  detailed_bug_tests.py  duplicate_sections.adoc  edge_case_tests.py  empty_sections.adoc  included_part.adoc  markdown_test.md  mcp_test_script.py  special_chars.adoc  tables_and_images.adoc  very_long.adoc  with_code_blocks.adoc  with_includes.adoc
tests/: test_asciidoc_parser.py  test_ask_experimental_186.py  test_ask_iterative_186.py  test_blockquote_type_270.py  test_circular_include_validation_251.py  test_cli.py  test_cli_elements_invalid_type_225.py  test_cli_enhancements_176_250.py  test_cli_packaging.py  test_cli_search_invalid_scope_226.py  test_code_blocks_as_sections_fix_207.py  test_content_access_api.py  test_dotted_filenames_266.py  test_edit_operations_bugs.py  test_element_content.py  test_elements_help_types_259.py  test_empty_files_line_range_224.py  test_file_system_handler.py  test_file_utils.py  test_get_dependencies_67.py  test_included_files_integration.py  test_insert_before_blank_line_216.py  test_insert_hierarchy_fix_208.py  test_manipulation_api.py  test_manipulation_bugs_244_245.py  test_markdown_html_comments_214.py  test_markdown_inline_html_comment_246.py  test_markdown_parser.py  test_max_depth_off_by_one_218.py  test_mcp_insert_after_229.py  test_mcp_insert_blank_lines_232.py  test_mcp_negative_params_220.py  test_mcp_tools.py  test_multi_root.py  test_navigation_api.py  test_negative_numbers_fix_199.py  test_preserve_title_fix_195.py  test_project_setup.py  test_property_based.py  test_structure_index.py  (+3 more)
tests/api/: test_structure_api.py
(+26 files in other folders)
