[project]
name = "dacli"
version = "0.4.38"
description = "Documentation Access CLI - Navigate and query large documentation projects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Ralf D. Müller" }
]
keywords = ["documentation", "cli", "asciidoc", "markdown", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "authlib>=1.6.11",  # Security: CVE-2026-28802, CVE-2026-27962, CVE-2026-28490, GHSA-jj8c-mmj3-mmgv
    "click>=8.3.1",
    "cryptography>=46.0.7",  # Security: CVE-2026-34073, CVE-2026-39892
    "fastapi>=0.115.0",
    "fastmcp>=3.2.0,<4",
    "pathspec>=1.0.3",
    "pydocket>=0.17.2,<0.19",  # Required by fastmcp
    "pygments>=2.20.0",  # Security: CVE-2026-4539
    "pyjwt>=2.12.0",  # Security: CVE-2026-32597
    "python-dotenv>=1.2.2",  # Security: CVE-2026-28684
    "python-multipart>=0.0.26",  # Security: CVE-2026-40347
    "pyyaml>=6.0",
    "requests>=2.33.0",  # Security: CVE-2026-25645
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/docToolchain/dacli"
Repository = "https://github.com/docToolchain/dacli"
Issues = "https://github.com/docToolchain/dacli/issues"

[project.optional-dependencies]
dev = [
    "asciidoc-linter @ git+https://github.com/docToolchain/asciidoc-linter.git",
    "hypothesis>=6.0.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",  # Security: CVE-2025-71176
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
dacli = "dacli.cli:cli"
dacli-mcp = "dacli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dacli"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
